[metadata]
name = mlearns
version = 0.1.0
description = My own little machine learning package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mlearns
author = Lukas Zwaller
license = MIT

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.10

[options.packages.find]
where=src